# znote

./: README.md  pyproject.toml
src/znote/: __init__.py  core.py  dispatch.py
src/znote/docs/: example-docs.md
tests/: test_core.py  test_dispatch.py  test_emit.py  test_emit_repr_str.py
