[project]
name = "znote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zdeyn", email = "i.am.zdeyn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0.0",
]
